Enable user to change theme & language

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -15,9 +15,21 @@
     "Footer": {
       "title": "TryAi ©2020 Created by {{creators}}"
     },
+    "Header": {
+      "LanguageSwitcher": {
+        "chooseLanguage": "Change language"
+      },
+      "ThemeSwitcher": {
+        "chooseTheme": "Change theme",
+        "light": "Light",
+        "dark": "dark"
+      }
+    },
     "common": {
       "appTitle": "TryAi",
-      "toDo": "TO DO..."
+      "toDo": "TO DO...",
+      "en": "English",
+      "pl": "Polish"
     }
   }
 }
